# pcr_misc_ucm-uned_25-26

./: .gitignore  .~lock.tarea3.odt#  Dockerfile  README.md  S2405896317323303.bib  ros_entrypoint.sh  run.sh  tarea3.odt
latex/: InforMeX.cls  anexo_codigo.aux  anexo_codigo.tex  anymal.tex  autoria.aux  autoria.tex  crazyflie.aux  crazyflie.tex  docker.aux  docker.tex  ejer1.aux  ejer2.aux  ejer2.tex  ejer3.aux  ejer3.tex  ejer4.aux  ejer4.tex  enunciado.aux  enunciado.tex  flirKobra725.aux  flirKobra725.tex  main.aux  main.bbl-SAVE-ERROR  main.bcf  main.lof  main.lot  main.out  main.tex  main.toc  mitCheetah.aux  mitCheetah.tex  packbot.tex  pez.aux  pez.tex  referencias.bib  resumen.aux  rhex.aux  rhex.tex  shakey.aux  shakey.tex  (+14 more)
latex/Code/: dockerfile  ejercicio2.clp  run.sh
latex/Code/tarea1/: ExecTraj.txt  controller.cc  main.cpp  metricCpp.cpp  metricHpp.hpp  poseHpp.hpp  script_por_defecto.lua  serviceCpp.cpp  serviceHpp.hpp  subscriber_cmdVel.lua
latex/Code/tarea2/: 1_params.yaml  1_run.txt  2_params.yaml  publisher_infrared.lua
tareas/: khepera_ros2_python_script.py  publisher.lua  publisher.py  service.lua  service.py
tareas/ros2_ws/src/interfaces/: CMakeLists.txt  package.xml
tareas/ros2_ws/src/tarea1/: CMakeLists.txt  package.xml
tareas/ros2_ws/src/tarea1/config/: params.yaml
tareas/ros2_ws/src/tarea1/include/tarea1/: icc_controller.hpp  khepera_controller.hpp  pose_controller.hpp
tareas/ros2_ws/src/tarea1/results/: icc_geometrico_Kv0.25.csv  icc_geometrico_Kv0.5.csv  icc_reactivo_Kp0.5.csv  icc_reactivo_Kv0.1.csv  icc_reactivo_Kv0.15.csv  icc_reactivo_Kv0.2.csv  icc_reactivo_Kv0.3.csv  icc_reactivo_Kv0.35.csv  icc_reactivo_Kv0.4.csv  icc_reactivo_Kv0.45.csv  icc_reactivo_Kv0.5.csv  icc_reactivo_Kv0.9.csv  icc_reactivo_Kv1.1.csv  icc_reactivo_Kv1.2.csv  icc_reactivo_Kv1.4.csv  icc_reactivo_Kv1.csv
tareas/ros2_ws/src/tarea1/src/: icc_controller.cpp  main.cpp  main_pose_controller.cpp  metrics_utils.cpp  pose_controller.cpp  sweep.cpp  test_service.cpp
tareas/ros2_ws/src/tarea2/: CMakeLists.txt  package.xml
tareas/ros2_ws/src/tarea2/config/: params.yaml
tareas/ros2_ws/src/tarea2/include/tarea2/: braitenberg.hpp  braitenberg_controller.hpp  braitenberg_puro.hpp  braitenberg_repulsion.hpp  braitenberg_target_controller.hpp  campo_vectorial.hpp  controllers.hpp  khepera_controller.hpp  metrics_utils.hpp  tang.hpp
tareas/ros2_ws/src/tarea2/results/: arbitraje_prioritario.csv  blending_lineal.csv  braitenberg.csv  braitenberg_target_geometric.csv  braitenberg_target_reactive.csv  icc_geometrico_Kp0.15.csv  icc_geometrico_Kp0.2.csv  icc_geometrico_Kp0.25.csv  icc_geometrico_Kp0.4.csv  icc_geometrico_Kp0.5.csv  icc_geometrico_Kv0.1.csv  icc_geometrico_Kv0.15.csv  icc_geometrico_Kv0.4.csv  icc_geometrico_Kv0.45.csv  icc_geometrico_Kv0.5.csv  icc_geometrico_Kv0.55.csv  icc_reactivo_Kp0.1.csv  icc_reactivo_Kp0.15.csv  icc_reactivo_Kp0.2.csv  icc_reactivo_Kp0.25.csv  icc_reactivo_Kp0.35.csv  icc_reactivo_Kp0.4.csv  icc_reactivo_Kp0.5.csv  icc_reactivo_Kv0.1.csv  icc_reactivo_Kv0.5.csv  icc_reactivo_Kv0.55.csv  icc_reactivo_Kv0.6.csv  script.py
tareas/ros2_ws/src/tarea2/src/: -- Braitenberg corregido para Khepera IV.lua  braitenberg.cpp  braitenberg_controller.cpp  braitenberg_puro.cpp  braitenberg_repulsion.cpp  braitenberg_target_controller.cpp  campo_vectorial.cpp  controllers.cpp  khepera_controller.cpp  main.cpp  main2.cpp  main3.cpp  main_braitenberg_controller.cpp  main_braitenberg_target_controller.cpp  metrics_utils.cpp  service_utils.cpp  tang.cpp
tareas/ros2_ws/src/tarea3/: CMakeLists.txt  package.xml
tareas/ros2_ws/src/tarea3/config/: params.yaml
tareas/ros2_ws/src/tarea3/include/tarea3/: coordinated_formation_controller.hpp  formation_controller.hpp  formation_logger.hpp  pose_controller.hpp
tareas/ros2_ws/src/tarea3/results/: formation_log.csv  formation_log_circle.csv  formation_log_circleSimple.csv  formation_log_crossSimple.csv  formation_log_line.csv  formation_log_lineSimple.csv  icc_geometrico_Kv0.2.csv  icc_geometrico_Kv0.3.csv  icc_geometrico_Kv0.35.csv  icc_geometrico_Kv0.6.csv  icc_reactivo_Kp0.5.csv  icc_reactivo_Kv0.2.csv  icc_reactivo_Kv0.25.csv
tareas/ros2_ws/src/tarea3/src/: coordinated_formation_controller.cpp  formation_controller.cpp  main_coordinated_formation_controller.cpp  main_formation_controller.cpp  main_pose_controller.cpp  metrics_utils.cpp  pose_controller.cpp  service_utils.cpp
tareas/ros2_ws/tarea1/: CMakeLists.txt  package.xml
(+16 files in other folders)
